--- a/src/main/resources/com/example/cia_3/login.fxml
+++ b/src/main/resources/com/example/cia_3/login.fxml
@@ -1,53 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.AppBar?>
-<?import com.gluonhq.charm.glisten.control.DropdownButton?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cia_3.HelloController">
    <children>
-      <AppBar layoutX="6.0" layoutY="14.0" prefWidth="538.0" titleText="WELCOME TO INDIAN RAILWAYS" />
-      <ImageView fitHeight="354.0" fitWidth="600.0" layoutY="-6.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="354.0" fitWidth="600.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@indian-railways.jpeg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="61.0" fitWidth="57.0" layoutX="549.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcfcfc" height="223.0" layoutX="14.0" layoutY="77.0" stroke="BLACK" strokeType="INSIDE" width="288.0" />
+      <TextField layoutX="21.0" layoutY="169.0" prefHeight="26.0" prefWidth="76.0" style="-fx-background-color: white;" text="To" />
+      <TextField layoutX="21.0" layoutY="100.0" onAction="#onHelloButtonClick_1" prefHeight="26.0" prefWidth="76.0" style="-fx-background-color: white;" text="From" />
+      <Button layoutX="31.0" layoutY="256.0" mnemonicParsing="false" onAction="#onHelloButtonClick" text="Submit" />
+      <DatePicker layoutX="135.0" layoutY="126.0" prefHeight="26.0" prefWidth="136.0" promptText="DD/MM/YYYY" />
+    <CheckBox layoutX="20.0" layoutY="225.0" prefHeight="25.0" prefWidth="172.0" text="Felxible with dates" />
+      <CheckBox layoutX="117.0" layoutY="259.0" prefHeight="25.0" prefWidth="172.0" text="Person with disability" />
+      <MenuButton layoutX="174.0" layoutY="188.0" mnemonicParsing="false" text="All Classes">
+        <items>
+            <MenuItem mnemonicParsing="false" text="3rd AC" />
+          <MenuItem mnemonicParsing="false" text="2nd AC" />
+            <MenuItem mnemonicParsing="false" text="1st AC" />
+            <MenuItem mnemonicParsing="false" text="Sleeper" />
+        </items>
+      </MenuButton>
+      <TextField layoutY="14.0" prefHeight="36.0" prefWidth="544.0" style="-fx-alignment: CENTER; -fx-background-size: 40; -fx-background-color: BLUE; -fx-font-size: 20; -fx-text-fill: WHITE;" text="WELCOME TO INDIAN RAILWAYS">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor>
+         <effect>
+            <Bloom />
+         </effect>
+      </TextField>
+      <ImageView fitHeight="61.0" fitWidth="57.0" layoutX="544.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@logo.png" />
          </image>
       </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcfcfc" height="223.0" layoutX="14.0" layoutY="100.0" stroke="BLACK" strokeType="INSIDE" width="288.0" />
-      <TextField layoutX="20.0" layoutY="187.0" prefHeight="26.0" prefWidth="76.0" style="-fx-background-color: white;" text="To" />
-      <TextField layoutX="20.0" layoutY="124.0" prefHeight="26.0" prefWidth="76.0" style="-fx-background-color: white;" text="From" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="37.0" layoutX="14.0" layoutY="11.0" stroke="BLACK" strokeType="INSIDE" width="494.0" AnchorPane.leftAnchor="14.0" />
-      <Text fontSmoothingType="LCD" layoutX="20.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome To Indian Railway">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Text>
-      <Button layoutX="30.0" layoutY="284.0" mnemonicParsing="false" onAction="#onHelloButtonClick" text="Submit" />
-      <DatePicker layoutX="135.0" layoutY="126.0" prefHeight="26.0" prefWidth="136.0" promptText="DD/MM/YYYY" />
-    <CheckBox layoutX="20.0" layoutY="225.0" prefHeight="25.0" prefWidth="172.0" text="Felxible with dates" />
-      <DropdownButton layoutX="153.0" layoutY="174.0">
-          <items>
-              <MenuItem text="All classes" />
-              <MenuItem text="2nd AC " />
-              <MenuItem text="1st AC" />
-            <MenuItem text="3rd AC" />
-            <MenuItem text="Sleeper" />
-          </items>
-      </DropdownButton>
-      <CheckBox layoutX="117.0" layoutY="259.0" prefHeight="25.0" prefWidth="172.0" text="Person with disability" />
    </children>
 </AnchorPane>
