--- a/src/main/resources/com/example/cia_3/traintimetable.fxml
+++ b/src/main/resources/com/example/cia_3/traintimetable.fxml
@@ -6,19 +6,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="595.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cia_3.HelloController">
+<AnchorPane prefHeight="595.0" prefWidth="1044.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cia_3.search">
    <children>
-      <TableView layoutX="49.0" layoutY="138.0" prefHeight="200.0" prefWidth="717.0">
+      <TableView fx:id="table" layoutX="49.0" layoutY="138.0" prefHeight="200.0" prefWidth="717.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="TRAIN_NO" />
-          <TableColumn prefWidth="114.0" text="TRAIN_NAME" />
-            <TableColumn prefWidth="114.0" text="DEP_STATION" />
-            <TableColumn prefWidth="132.0" text="ARRIVAL_STATION" />
-            <TableColumn prefWidth="97.0" text="DEP_TIME" />
-            <TableColumn prefWidth="113.0" text="ARRIVAL_TIME" />
-            <TableColumn prefWidth="74.0" text="DAYS" />
+          <TableColumn fx:id="trainno" prefWidth="75.0" text="TRAIN_NO" />
+          <TableColumn fx:id="trainname" prefWidth="114.0" text="TRAIN_NAME" />
+            <TableColumn fx:id="depstation" prefWidth="114.0" text="DEP_STATION" />
+            <TableColumn fx:id="arrivalstation" prefWidth="132.0" text="ARRIVAL_STATION" />
+            <TableColumn fx:id="deptime" prefWidth="97.0" text="DEP_TIME" />
+            <TableColumn fx:id="arrivaltime" prefWidth="113.0" text="ARRIVAL_TIME" />
+            <TableColumn fx:id="days" prefWidth="74.0" text="DAYS" />
         </columns>
       </TableView>
-      <Button layoutX="347.0" layoutY="480.0" mnemonicParsing="false" text="Button" />
+      <Button onAction="#distancetable" layoutX="347.0" layoutY="480.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
